--- a/cv.html
+++ b/cv.html
@@ -1,10 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>My CV</title>
     <link href="css/cv.css" rel="stylesheet">
 </head>
-<body>
 
+<body>
+    <section class="contact-info">
+        <address>
+            <span class="contact-address">4900 Parkway Dr.</span>
+            <span class="contact-suite">Suite 160</span>
+            <span class="contact-citystatezip">Mason, OH 45040</span>
+            <span class="contact-phone">513-322-8888</span>
+            <span class="contact-email">gdoud@maxtrain.com</span>
+        </address>
+        <span id="name">Gregory Doud</span>
+    </section>
+    <hr>
+    <section>
+        <h3>Career Goals:</h3>
+        <div class="career-goals">
+            <p>Stay employed until I'm ready to retire.</p>
+        </div>
+    </section>
+    <hr>
+    <section class="technologies">
+        <h3>Technologies Known:</h3>
+
+        <div class="centered">
+        <table>
+            <tr>
+                <td>Git/GitHub</td>
+                <td>MySQL</td>
+                <td>Java</td>
+                <td>Hibernate</td>
+            </tr>
+            <tr>
+                <td>Eclipse</td>
+                <td>Dependency Injection</td>
+                <td>HTML</td>
+                <td>CSS</td>
+            </tr>
+        </table>
+
+        </div>
+    </section>
+    <hr>
+    <section class="work-experience">
+        <h3>Work Experience</h3>
+        <div class="job">
+            <span class="company">MAX Technical Training, </span>
+            <span class="jobtitle">Senior Instructor, </span>
+            <span class="company-location">Mason, OH, </span>
+            <span class="duration">May 2017 - present </span>
+            <ul>
+                <li>Introduced the JSON service in the capstone project.</li>
+                <li>Introduced the assessments.</li>
+                <li>Introduced the capstone evaluation.</li>
+            </ul>
+        </div>
+        <div class="job">
+            <span class="company">The Iron Yard, </span>
+            <span class="jobtitle">Senior Instructor, </span>
+            <span class="company-location">Cincinnati, OH, </span>
+            <span class="duration">July 2016 - May 2017 </span>
+            <ul>
+                <li>Introduced the JSON service in the capstone project.</li>
+                <li>Introduced the assessments.</li>
+                <li>Introduced the capstone evaluation.</li>
+            </ul>
+        </div>
+    </section>
+    <hr>
+    <section class="education">
+        <h3>Education</h3>
+        <ul>
+            <li>
+                <span class="school">Athenaeum of Ohio, </span>
+                <span class="degree">MS LPM, </span>
+                <span class="graddate">2020</span>
+            </li>
+            <li>
+                <span class="school">University of Cincinnati, </span>
+                <span class="degree">BS IPS, </span>
+                <span class="graddate">1985</span>
+            </li>
+            <li>
+                <span class="school">St. Xavier HS, </span>
+                <span class="degree">College Prep, </span>
+                <span class="graddate">1975</span>
+            </li>
+        </ul>
+    </section>
 </body>
+
 </html>
