--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>Greg Doud</h1>
+    <h1>Gregory Doud</h1>
     <span>4900 Parkway Dr.</span><br>
     <span id="abc">Suite 163</span><br>
     <span>Mason, OH 45040</span>
