--- a/ctof.html
+++ b/ctof.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <label>Celcius:</label>
-    <input id="celcius" type="text" size="10" value=0>
+    <input id="celcius" type="number" size="10" value=0>
     <button onclick="convert()">Convert</button>
     <label>Farenheit:</label>
     <label id="farenheit"></label>
