Added War games

--- a/war2.html
+++ b/war2.html
@@ -4,13 +4,15 @@
 <head>
     <title>War</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <script src="js/war.js"></script>
-    <link href="css/war.css" rel="stylesheet">
+    <script src="js/war2.js"></script>
+    <link href="css/war2.css" rel="stylesheet">
 </head>
 
 <body onload="loaded()">
     <div>
-        <label>My score: <span id="myscore"></span></label> | <label>Opp score: <span id="oppscore"></span></label>
+        <label>My score: <span id="myscore"></span></label> | 
+        <label>Opp score: <span id="oppscore"></span></label> |
+        <label>Point Value: <span id="ptvalue"></span></label>
     </div>
     
     <div>
@@ -19,8 +21,11 @@
     </div>
 
     <div>
-        <button onclick="winner()" class="btn btn-success">Winner</button>
+        <button onclick="winner()" class="btn btn-success">Winner</button> |
+        <button onclick="tie()" class="btn btn-warning" id="war">Tie</button> |
         <button onclick="loser()" class="btn btn-danger">Loser</button>
+        <label id="msg"> | This means WAR!!!</label>
+        
     </div>
 </body>
 
